src/tee/tee_internal_api/include/lib/tee_internal_api/tee_internal_api.h

// Fuchsia definition of the TEE Core Internal API v1.3.1
//
// https://globalplatform.org/specs-library/tee-internal-core-api-specification/

// Common Definitions 3.1

// 3.1.1 API Version

#define TEE_CORE_API_MAJOR_VERSION (1)
#define TEE_CORE_API_MINOR_VERSION (3)
#define TEE_CORE_API_MAINTENANCE_VERSION (1)
#define TEE_CORE_API_VERSION                                                 \
  ((TEE_CORE_API_MAJOR_VERSION << 24) + (TEE_CORE_API_MINOR_VERSION << 16) + \
   (TEE_CORE_API_MAINTENANCE_VERSION << 8))
// 4.3.1 TA_CreateEntryPoint
TEE_Result TA_EXPORT TA_CreateEntryPoint(void);
// 4.3.2 TA_DestroyEntryPoint
void TA_EXPORT TA_DestroyEntryPoint(void);
// 4.3.3 TA_OpenSessionEntryPoint
TEE_Result TA_EXPORT TA_OpenSessionEntryPoint(uint32_t paramTypes,
                                              /* inout */ TEE_Param params[4],
                                              /* out */ /* ctx */ void** sessionContext);
// 4.3.4 TA_CloseSessionEntryPoint
void TA_EXPORT TA_CloseSessionEntryPoint(
    /* ctx */ void* sessionContext);
// 4.3.5 TA_InvokeCommandEntryPoint
TEE_Result TA_EXPORT TA_InvokeCommandEntryPoint(
    /* ctx */ void* sessionContext, uint32_t commandID, uint32_t paramTypes,
    /* inout */ TEE_Param params[4]);
// 4.4.1 TEE_GetPropertyAsString

TEE_Result TEE_GetPropertyAsString(TEE_PropSetHandle propsetOrEnumerator,
                                   /* instringopt */ char* name,
                                   /* outstring */ char* valueBuffer, size_t* valueBufferLen);
// 4.4.2 TEE_GetPropertyAsBool

TEE_Result TEE_GetPropertyAsBool(TEE_PropSetHandle propsetOrEnumerator,
                                 /* instringopt */ char* name, /* out */ bool* value);
// 4.4.3.1 TEE_GetPropertyAsU32

TEE_Result TEE_GetPropertyAsU32(TEE_PropSetHandle propsetOrEnumerator, /* instringopt */ char* name,
                                /* out */ uint32_t* value);
// 4.4.3.2 TEE_GetPropertyAsU64

TEE_Result TEE_GetPropertyAsU64(TEE_PropSetHandle propsetOrEnumerator, /* instringopt */ char* name,
                                /* out */ uint64_t* value);
// 4.4.4 TEE_GetPropertyAsBinaryBlock

TEE_Result TEE_GetPropertyAsBinaryBlock(TEE_PropSetHandle propsetOrEnumerator,
                                        /* instringopt */ char* name,
                                        /* outbuf */ void* valueBuffer, size_t* valueBufferLen);
// 4.4.5 TEE_GetPropertyAsUUID

TEE_Result TEE_GetPropertyAsUUID(TEE_PropSetHandle propsetOrEnumerator,
                                 /* instringopt */ char* name, /* out */ TEE_UUID* value);
// 4.4.6 TEE_GetPropertyAsIdentity

TEE_Result TEE_GetPropertyAsIdentity(TEE_PropSetHandle propsetOrEnumerator,
                                     /* instringopt */ char* name, /* out */ TEE_Identity* value);
// 4.4.7 TEE_AllocatePropertyEnumerator

TEE_Result TEE_AllocatePropertyEnumerator(/* out */ TEE_PropSetHandle* enumerator);
// 4.4.8 TEE_FreePropertyEnumerator

void TEE_FreePropertyEnumerator(TEE_PropSetHandle enumerator);
// 4.4.9 TEE_StartPropertyEnumerator

void TEE_StartPropertyEnumerator(TEE_PropSetHandle enumerator,

                                 TEE_PropSetHandle propSet);
// 4.4.10 TEE_ResetPropertyEnumerator

void TEE_ResetPropertyEnumerator(TEE_PropSetHandle enumerator);
// 4.4.11 TEE_GetPropertyName

TEE_Result TEE_GetPropertyName(TEE_PropSetHandle enumerator,
                               /* outstring */ void* nameBuffer, size_t* nameBufferLen);
// 4.4.12 TEE_GetNextProperty

TEE_Result TEE_GetNextProperty(TEE_PropSetHandle enumerator);
// 4.8.1 TEE_Panic

__NO_RETURN void TEE_Panic(TEE_Result panicCode);
// 4.9.1 TEE_OpenTASession
TEE_Result TEE_OpenTASession(
    /* in */ const TEE_UUID* destination, uint32_t cancellationRequestTimeout, uint32_t paramTypes,
    /* inout */ TEE_Param params[4],
    /* out */ TEE_TASessionHandle* session,
    /* out */ uint32_t* returnOrigin);
// 4.9.2 TEE_CloseTASession
void TEE_CloseTASession(TEE_TASessionHandle session);
// 4.9.3 TEE_InvokeTACommand
TEE_Result TEE_InvokeTACommand(TEE_TASessionHandle session, uint32_t cancellationRequestTimeout,
                               uint32_t commandID, uint32_t paramTypes,
                               /* inout */ TEE_Param params[4],
                               /* out */ uint32_t* returnOrigin);
// 4.10.1 TEE_GetCancellationFlag
bool TEE_GetCancellationFlag(void);
// 4.10.2 TEE_UnmaskCancellation
bool TEE_UnmaskCancellation(void);
// 4.10.3 TEE_MaskCancellation
bool TEE_MaskCancellation(void);
// 4.11.1 TEE_CheckMemoryAccessRights
TEE_Result TEE_CheckMemoryAccessRights(uint32_t accessFlags,
                                       /* inbuf */ void* buffer, size_t size);
// 4.11.2 TEE_SetInstanceData
void TEE_SetInstanceData(
    /* ctx */ void* instanceData);
// 4.11.3 TEE_GetInstanceData
/* ctx */ void* TEE_GetInstanceData(void);
// 4.11.4 TEE_Malloc
void* TEE_Malloc(size_t size, uint32_t hint);
// 4.11.5 TEE_Realloc
void* TEE_Realloc(
    /* inout */ void* buffer, size_t newSize);
// 4.11.6 TEE_Free
void TEE_Free(void* buffer);
// 4.11.7 TEE_MemMove
void TEE_MemMove(/* outbuf(size) */ void* dest, /* inbuf(size) */ const void* src, size_t size);
// 4.11.8 TEE_MemCompare
int32_t TEE_MemCompare(/* inbuf(size) */ const void* buffer1, /* inbuf(size) */ const void* buffer2,
                       size_t size);
// 4.11.9 TEE_MemFill
void TEE_MemFill(/* outbuf(size) */ void* buffer, uint8_t x, size_t size);
// 5.5.1 TEE_GetObjectInfo1
TEE_Result TEE_GetObjectInfo1(TEE_ObjectHandle object,
                              /* out */ TEE_ObjectInfo* objectInfo);
// 5.5.2 TEE_RestrictObjectUsage1
TEE_Result TEE_RestrictObjectUsage1(TEE_ObjectHandle object, uint32_t objectUsage);
// 5.5.3 TEE_GetObjectBufferAttribute
TEE_Result TEE_GetObjectBufferAttribute(TEE_ObjectHandle object, uint32_t attributeID,
                                        /* outbuf */ void* buffer, size_t* size);
// 5.5.4 TEE_GetObjectValueAttribute
TEE_Result TEE_GetObjectValueAttribute(TEE_ObjectHandle object, uint32_t attributeID,
                                       /* outopt */ uint32_t* a,
                                       /* outopt */ uint32_t* b);
// 5.5.5 TEE_CloseObject
void TEE_CloseObject(TEE_ObjectHandle object);
// 5.6.1 TEE_AllocateTransientObject
TEE_Result TEE_AllocateTransientObject(uint32_t objectType, uint32_t maxObjectSize,
                                       /* out */ TEE_ObjectHandle* object);
// 5.6.2 TEE_FreeTransientObject
void TEE_FreeTransientObject(TEE_ObjectHandle object);
// 5.6.3 TEE_ResetTransientObject
void TEE_ResetTransientObject(TEE_ObjectHandle object);
// 5.6.4 TEE_PopulateTransientObject
TEE_Result TEE_PopulateTransientObject(TEE_ObjectHandle object,
                                       /* in */ TEE_Attribute* attrs, uint32_t attrCount);
// 5.6.5 TEE_InitRefAttribute, TEE_InitValueAttribute
void TEE_InitRefAttribute(
    /* out */ TEE_Attribute* attr, uint32_t attributeID,
    /* inbuf */ void* buffer, size_t length);
void TEE_InitValueAttribute(
    /* out */ TEE_Attribute* attr, uint32_t attributeID, uint32_t a, uint32_t b);
// 5.6.6 TEE_CopyObjectAttributes1
TEE_Result TEE_CopyObjectAttributes1(TEE_ObjectHandle destObject, TEE_ObjectHandle srcObject);
// 5.6.7 TEE_GenerateKey
TEE_Result TEE_GenerateKey(TEE_ObjectHandle object, uint32_t keySize,
                           /* in */ TEE_Attribute* params, uint32_t paramCount);
// 5.7.1 TEE_OpenPersistentObject
TEE_Result TEE_OpenPersistentObject(uint32_t storageID, /* in(objectIDLength) */ void* objectID,
                                    size_t objectIDLen, uint32_t flags,
                                    /* out */ TEE_ObjectHandle* object);
// 5.7.2 TEE_CreatePersistentObject
TEE_Result TEE_CreatePersistentObject(uint32_t storageID, /* in(objectIDLength) */ void* objectID,
                                      size_t objectIDLen, uint32_t flags,
                                      TEE_ObjectHandle attributes,
                                      /* inbuf */ void* initialData, size_t initialDataLen,
                                      /* outopt */ TEE_ObjectHandle* object);
// 5.7.4 TEE_CloseAndDeletePersistentObject1
TEE_Result TEE_CloseAndDeletePersistentObject1(TEE_ObjectHandle object);
// 5.7.5 TEE_RenamePersistentObject
TEE_Result TEE_RenamePersistentObject(TEE_ObjectHandle object,
                                      /* in(newObjectIDLen) */ void* newObjectID,
                                      size_t newObjectIDLen);