src/tee/tee_internal_api/src/binding.rs

pub const TEE_ATTR_SM2_KEP_USER: u32 = 4026533446;
pub const TEE_ATTR_SM2_KEP_CONFIRMATION_IN: u32 = 3489662790;
pub const TEE_ATTR_SM2_KEP_CONFIRMATION_OUT: u32 = 3489663046;
pub const TEE_ATTR_FLAG_VALUE: u32 = 536870912;
pub const TEE_ATTR_FLAG_PUBLIC: u32 = 268435456;
pub const TEE_CORE_API_MAJOR_VERSION: u32 = 1;
pub const TEE_CORE_API_MINOR_VERSION: u32 = 2;
pub const TEE_CORE_API_MAINTENANCE_VERSION: u32 = 1;
pub const TEE_CORE_API_VERSION: u32 = 16908544;
pub type TEE_Result = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_UUID {
    pub timeLow: u32,
    pub timeMid: u16,
    pub timeHiAndVersion: u16,
    pub clockSeqAndNode: [u8; 8usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_Identity {
    pub login: u32,
    pub uuid: TEE_UUID,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union TEE_Param {
    pub memref: TEE_Param__bindgen_ty_1,
    pub value: TEE_Param__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_Param__bindgen_ty_1 {
    pub buffer: *mut ::std::os::raw::c_void,
    pub size: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_Param__bindgen_ty_2 {
    pub a: u32,
    pub b: u32,
}
impl ::std::fmt::Debug for TEE_Param {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "TEE_Param {{ union }}")
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __TEE_TASessionHandle {
    _unused: [u8; 0],
}
pub type TEE_TASessionHandle = *mut __TEE_TASessionHandle;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __TEE_PropSetHandle {
    _unused: [u8; 0],
}
pub type TEE_PropSetHandle = *mut __TEE_PropSetHandle;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct TEE_Attribute {
    pub attributeID: u32,
    pub __bindgen_padding_0: [u8; 4usize],
    pub content: TEE_Attribute__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union TEE_Attribute__bindgen_ty_1 {
    pub ref_: TEE_Attribute__bindgen_ty_1__bindgen_ty_1,
    pub value: TEE_Attribute__bindgen_ty_1__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_Attribute__bindgen_ty_1__bindgen_ty_1 {
    pub buffer: *mut ::std::os::raw::c_void,
    pub length: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_Attribute__bindgen_ty_1__bindgen_ty_2 {
    pub a: u32,
    pub b: u32,
}
impl ::std::fmt::Debug for TEE_Attribute__bindgen_ty_1 {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "TEE_Attribute__bindgen_ty_1 {{ union }}")
    }
}
impl ::std::fmt::Debug for TEE_Attribute {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        write!(f, "TEE_Attribute {{ content: {:?} }}", self.content)
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_ObjectInfo {
    pub objectType: u32,
    pub objectSize: u32,
    pub maxObjectSize: u32,
    pub objectUsage: u32,
    pub dataSize: usize,
    pub dataPosition: usize,
    pub handleFlags: u32,
    pub __bindgen_padding_0: [u8; 4usize],
}
pub type TEE_Whence = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __TEE_ObjectHandle {
    _unused: [u8; 0],
}
pub type TEE_ObjectHandle = *mut __TEE_ObjectHandle;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __TEE_ObjectEnumHandle {
    _unused: [u8; 0],
}
pub type TEE_ObjectEnumHandle = *mut __TEE_ObjectEnumHandle;
pub type TEE_OperationMode = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_OperationInfo {
    pub algorithm: u32,
    pub operationClass: u32,
    pub mode: u32,
    pub digestLength: u32,
    pub maxKeySize: u32,
    pub keySize: u32,
    pub requiredKeyUsage: u32,
    pub handleState: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_OperationInfoKey {
    pub keySize: u32,
    pub requiredKeyUsage: u32,
}
#[repr(C)]
#[derive(Debug)]
pub struct TEE_OperationInfoMultiple {
    pub algorithm: u32,
    pub operationClass: u32,
    pub mode: u32,
    pub digestLength: u32,
    pub maxKeySize: u32,
    pub handleState: u32,
    pub operationState: u32,
    pub numberOfKeys: u32,
    pub keyInformation: __IncompleteArrayField<TEE_OperationInfoKey>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __TEE_OperationHandle {
    _unused: [u8; 0],
}
pub type TEE_OperationHandle = *mut __TEE_OperationHandle;
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct TEE_Time {
    pub seconds: u32,
    pub millis: u32,
}
pub type TEE_BigInt = u32;
pub type TEE_BigIntFMMContext = u32;
pub type TEE_BigIntFMM = u32;
extern "C" {
    pub fn TA_CreateEntryPoint() -> TEE_Result;
}
extern "C" {
    pub fn TA_DestroyEntryPoint();
}
extern "C" {
    pub fn TA_OpenSessionEntryPoint(
        paramTypes: u32,
        params: *mut TEE_Param,
        sessionContext: *mut *mut ::std::os::raw::c_void,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TA_CloseSessionEntryPoint(sessionContext: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn TA_InvokeCommandEntryPoint(
        sessionContext: *mut ::std::os::raw::c_void,
        commandID: u32,
        paramTypes: u32,
        params: *mut TEE_Param,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsString(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        valueBuffer: *mut ::std::os::raw::c_char,
        valueBufferLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsBool(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        value: *mut bool,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsU32(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        value: *mut u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsU64(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        value: *mut u64,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsBinaryBlock(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        valueBuffer: *mut ::std::os::raw::c_void,
        valueBufferLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsUUID(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        value: *mut TEE_UUID,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetPropertyAsIdentity(
        propsetOrEnumerator: TEE_PropSetHandle,
        name: *mut ::std::os::raw::c_char,
        value: *mut TEE_Identity,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_AllocatePropertyEnumerator(enumerator: *mut TEE_PropSetHandle) -> TEE_Result;
}
extern "C" {
    pub fn TEE_FreePropertyEnumerator(enumerator: TEE_PropSetHandle);
}
extern "C" {
    pub fn TEE_StartPropertyEnumerator(enumerator: TEE_PropSetHandle, propSet: TEE_PropSetHandle);
}
extern "C" {
    pub fn TEE_ResetPropertyEnumerator(enumerator: TEE_PropSetHandle);
}
extern "C" {
    pub fn TEE_GetPropertyName(
        enumerator: TEE_PropSetHandle,
        nameBuffer: *mut ::std::os::raw::c_void,
        nameBufferLen: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetNextProperty(enumerator: TEE_PropSetHandle) -> TEE_Result;
}
extern "C" {
    pub fn TEE_Panic(panicCode: TEE_Result) -> !;
}
extern "C" {
    pub fn TEE_OpenTASession(
        destination: *mut TEE_UUID,
        cancellationRequestTimeout: u32,
        paramTypes: u32,
        params: *mut TEE_Param,
        session: *mut TEE_TASessionHandle,
        returnOrigin: *mut u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CloseTASession(session: TEE_TASessionHandle);
}
extern "C" {
    pub fn TEE_InvokeTACommand(
        session: TEE_TASessionHandle,
        cancellationRequestTimeout: u32,
        commandID: u32,
        paramTypes: u32,
        params: *mut TEE_Param,
        returnOrigin: *mut u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetCancellationFlag() -> bool;
}
extern "C" {
    pub fn TEE_UnmaskCancellation() -> bool;
}
extern "C" {
    pub fn TEE_MaskCancellation() -> bool;
}
extern "C" {
    pub fn TEE_CheckMemoryAccessRights(
        accessFlags: u32,
        buffer: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_SetInstanceData(instanceData: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn TEE_GetInstanceData() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn TEE_Malloc(size: usize, hint: u32) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn TEE_Realloc(
        buffer: *mut ::std::os::raw::c_void,
        newSize: usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn TEE_Free(buffer: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn TEE_MemMove(
        dest: *mut ::std::os::raw::c_void,
        src: *mut ::std::os::raw::c_void,
        size: usize,
    );
}
extern "C" {
    pub fn TEE_MemCompare(
        buffer1: *mut ::std::os::raw::c_void,
        buffer2: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> i32;
}
extern "C" {
    pub fn TEE_MemFill(buffer: *mut ::std::os::raw::c_void, x: u8, size: usize);
}
extern "C" {
    pub fn TEE_GetObjectInfo1(
        object: TEE_ObjectHandle,
        objectInfo: *mut TEE_ObjectInfo,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_RestrictObjectUsage1(object: TEE_ObjectHandle, objectUsage: u32) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetObjectBufferAttribute(
        object: TEE_ObjectHandle,
        attributeID: u32,
        buffer: *mut ::std::os::raw::c_void,
        size: *mut usize,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GetObjectValueAttribute(
        object: TEE_ObjectHandle,
        attributeID: u32,
        a: *mut u32,
        b: *mut u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CloseObject(object: TEE_ObjectHandle);
}
extern "C" {
    pub fn TEE_AllocateTransientObject(
        objectType: u32,
        maxObjectSize: u32,
        object: *mut TEE_ObjectHandle,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_FreeTransientObject(object: TEE_ObjectHandle);
}
extern "C" {
    pub fn TEE_ResetTransientObject(object: TEE_ObjectHandle);
}
extern "C" {
    pub fn TEE_PopulateTransientObject(
        object: TEE_ObjectHandle,
        attrs: *mut TEE_Attribute,
        attrCount: u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_InitRefAttribute(
        attr: *mut TEE_Attribute,
        attributeID: u32,
        buffer: *mut ::std::os::raw::c_void,
        length: usize,
    );
}
extern "C" {
    pub fn TEE_InitValueAttribute(attr: *mut TEE_Attribute, attributeID: u32, a: u32, b: u32);
}
extern "C" {
    pub fn TEE_CopyObjectAttributes1(
        destObject: TEE_ObjectHandle,
        srcObject: TEE_ObjectHandle,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_GenerateKey(
        object: TEE_ObjectHandle,
        keySize: u32,
        params: *mut TEE_Attribute,
        paramCount: u32,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_OpenPersistentObject(
        storageID: u32,
        objectID: *mut ::std::os::raw::c_void,
        objectIDLen: usize,
        flags: u32,
        object: *mut TEE_ObjectHandle,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CreatePersistentObject(
        storageID: u32,
        objectID: *mut ::std::os::raw::c_void,
        objectIDLen: usize,
        flags: u32,
        attributes: TEE_ObjectHandle,
        initialData: *mut ::std::os::raw::c_void,
        initialDataLen: usize,
        object: *mut TEE_ObjectHandle,
    ) -> TEE_Result;
}
extern "C" {
    pub fn TEE_CloseAndDeletePersistentObject1(object: TEE_ObjectHandle) -> TEE_Result;
}
extern "C" {
    pub fn TEE_RenamePersistentObject(
        object: TEE_ObjectHandle,
        newObjectID: *mut ::std::os::raw::c_void,
        newObjectIDLen: usize,
    ) -> TEE_Result;
}
